добавил oidc с использованием keycloak, настроил его, также поправил несколько методов в контроллеремодуля seller-app

--- a/seller-app/src/main/resources/templates/products/list.html
+++ b/seller-app/src/main/resources/templates/products/list.html
@@ -28,6 +28,7 @@
     </tr>
     </tbody>
 </table>
+<p data-th-text="${info}"></p>
 <a data-th-href="@{/online-market/products/myProducts}">Мои Товары</a>
 </body>
 </html>
