--- a/seller-app/src/main/resources/templates/products/list.html
+++ b/seller-app/src/main/resources/templates/products/list.html
@@ -29,5 +29,8 @@
     </tbody>
 </table>
 <a data-th-href="@{/online-market/products/myProducts}">Мои Товары</a>
+<form method="post" data-th-action="@{/online-market/products/16/delete}">
+        <button type="submit">Поиск</button>
+</form>
 </body>
 </html>
