--- a/seller-app/src/main/resources/templates/products/list.html
+++ b/seller-app/src/main/resources/templates/products/list.html
@@ -24,6 +24,9 @@
         <td>
             <a data-th-href="@{/online-market/products/{productId}(productId=${product.id})}"
                data-th-text="${product.title}"></a>
+            <th:block th:if="${product.getProductMedia() != null and not #lists.isEmpty(product.getProductMedia()) and product.getProductMedia().getFirst() != null}">
+                <img th:src="@{${product.getProductMedia().getFirst().getMediaPath()}}" alt="Product Image">
+            </th:block>
         </td>
     </tr>
     </tbody>
