--- a/seller-app/src/main/resources/templates/products/my-product.html
+++ b/seller-app/src/main/resources/templates/products/my-product.html
@@ -15,6 +15,7 @@
     <li><strong>ID</strong>: <span data-th-text="${product.id}"></span></li>
     <li><strong>Название</strong>: <span data-th-text="${product.title}"></span></li>
     <li><strong>Описание</strong>: <span data-th-text="${product.details}"></span></li>
+    <li><strong>Цена</strong>: <span data-th-text="${product.price} + ' ₽'"></span></li>
 </ul>
 <div>
     <h2>Фотографии товара:</h2>
