--- a/seller-app/src/main/resources/templates/products/product.html
+++ b/seller-app/src/main/resources/templates/products/product.html
@@ -9,6 +9,7 @@
     <li><strong>ID</strong>: <span data-th-text="${product.id}"></span></li>
     <li><strong>Название</strong>: <span data-th-text="${product.title}"></span></li>
     <li><strong>Описание</strong>: <span data-th-text="${product.details}"></span></li>
+    <li><strong>Цена</strong>: <span data-th-value="${product.price}"></span></li>
 </ul>
 </body>
 </html>
